FIXED : page size is smaller when scrollbar is visible on chrome browser ON entire site

--- a/dashboard/static/style/influencers.scss
+++ b/dashboard/static/style/influencers.scss
@@ -31,11 +31,7 @@
 
   }
 
-}
-
-// Influencers Red button
-.influencers-breadcrumb {
-
+  // Influencers Red button
   & > :last-child {
 
       // Mobile
